--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-scikit-learn==0.19.1
-matplotlib==2.2.0
 easygui==0.98.1
+matplotlib==2.2.0
+scikit_image==0.13.1
 numpy==1.14.1
+scikit_learn==0.19.1
